Third commit work not done

--- a/GlobalStyles/globalStyles.scss
+++ b/GlobalStyles/globalStyles.scss
@@ -5,6 +5,7 @@ $secondary-color: #15631e;
 $white-color: #fff;
 $gray-color: #ececec;
 $dark-color: #414141;
+$light-green-color: #36d499;
 
 $font-family: "Poppins", sans-serif;
 
