--- a/login/style.css
+++ b/login/style.css
@@ -146,7 +146,7 @@ body {
   }
   .container .container-login .login-nav {
     display: flex;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     right: 0;
     left: 0;
@@ -154,6 +154,7 @@ body {
     align-items: center;
     justify-content: center;
     padding: 10px 30px;
+    z-index: -1;
   }
   .container .container-login .login-nav .login-nav-list {
     display: flex;
@@ -165,6 +166,7 @@ body {
   .container .container-login .login-nav .login-nav-list .login-nav-item .login-nav-link {
     padding: 5px 15px;
     color: #fff;
+    cursor: pointer;
   }
   .container .container-login .login-nav .login-nav-list .login-nav-item .login-nav-link:hover {
     color: #fff;
