--- a/login/style.scss
+++ b/login/style.scss
@@ -181,7 +181,7 @@ body {
 
       .login-nav {
         display: flex;
-        position: absolute;
+        position: fixed;
         bottom: 0;
         right: 0;
         left: 0;
@@ -189,6 +189,7 @@ body {
         align-items: center;
         justify-content: center;
         padding: 10px 30px;
+        z-index: -1;
 
         .login-nav-list {
           display: flex;
@@ -201,7 +202,7 @@ body {
             .login-nav-link {
               padding: 5px 15px;
               color: $white-color;
-
+              cursor: pointer;
               &:hover {
                 color: $white-color;
               }
